--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "expo-network": "~4.3.0",
+    "expo-font": "~10.2.0",
+    "expo-linking": "~3.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
